<resources>
    <string name="app_name">CleanMoney</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_header">Home</string>
    <string name="drawer_mis">MIS</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_status">Status</string>
    <string name="clear">Clear</string>
    <string name="previous_response">Previous Response:</string>
    <string name="current_response">Current Response:</string>
    <string name="drawer_pmgky">PMGKY</string>
    <string name="drawer_evarification">E-Verification of Cash Deposits</string>
    <string name="drawer_activities">Clean Money Activities</string>
    <string name="drawer_participants">Participants</string>
    <string name="drawer_resources">Resources</string>
    <string name="drawer_quickfacts">Quick Facts</string>
    <string name="drawer_socialmediacorner">Social Media Corner</string>
    <string name="drawer_newsupdates">News and Updates</string>
    <string name="drawer_helpdesk">Helpdesk</string>
    <string name="drawer_loginitduser">Login-ITD User</string>
    <string name="loading">Loading...</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="drawer_login">Login</string>
    <string name="drawer_operationcleanmoney">Operation Clean Money</string>
    <string name="drawer_mytask">My Task</string>
    <string name="drawer_newtask">New Task</string>
    <string name="drawer_pendingtask">Pending Task</string>
    <string name="drawer_comptask">Completed Task</string>
    <string name="drawer_closedtask">Closed Task</string>
    <string name="drawer_readyforupdate">Ready For Update</string>
    <string name="drawer_closed">Closed</string>
    <string name="drawer_myassigtask">My Assigned Task</string>
    <string name="drawer_createtask">Create Task</string>
    <string name="drawer_training">Training</string>
    <string name="drawer_aboutus">About Us</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="drawer_termscondition">Term &amp; Conditions</string>
    <string name="drawer_contactus">Contact Us</string>
    <string name="drawer_myaccounts">My Accounts</string>
    <string name="drawer_news">News</string>
    <string name="taskdesc">Description:</string>
    <string name="fav_task">FAVOURITE CONTACTS</string>
    <string name="title">Title*</string>
    <string name="heading">Heading</string>
    <string name="desc">Description*</string>
    <string name="chooseimage">Choose Image</string>
    <string name="url">Url</string>
    <string name="submitt">Submit</string>
    <string name="author">Author</string>
    <string name="drawer_favtask">Favourite</string>
    <string name="drawer_directory">Directory</string>
    <string name="drawer_success_stories">Success Stories</string>
    <string name="drawer_outreach_stories">Outreach</string>
    <string name="drawer_add_stories">Add Stories</string>
    <string name="drawer_edit_stories">Edit Stories</string>
    <string name="drawer_engage">Engage</string>
    <string name="drawer_isupport">I Support</string>
    <string name="clear_date">Clear Date</string>
    <string name="drawer_help">Help</string>
    <string name="no_favtask">No Favourite Contacts</string>
    <string name="details">DETAILS</string>
    <string name="action_settings">Settings</string>
    <string name="enterpanno">Enter Your PAN</string>
    <string name="valid_email">Please enter valid email id</string>
    <string name="sccessfullogin">Successfully login</string>
    <string name="valid_email_password">Please enter valid email and password</string>
    <string name="choosefile">Please choose a file</string>
    <string name="choosedate">Please choose date</string>
    <string name="select_date">Select date*</string>
    <string name="reassign_content">Task has been Re-Assigned \nPlease refer your mail for more details</string>
    <string name="password_notmatch">Your password and confirmation password do not match.</string>
    <string name="fill_password">Please fill password</string>
    <string name="valid_emailotp">Please enter valid email and OTP</string>
    <string name="went_wrong">Something went wrong please resend OTP</string>
    <string name="enterotp">Enter OTP</string>
    <string name="confirmation_dialog">Confirmation Dialog</string>
    <string name="otp_send_validation">If you do not receive OTP with in 5 minutes, you may request for another OTP by clicking on the resend OTP Button</string>
    <string name="do_you_want_to_make_call">Do you want to make call?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="add_to_fav">Add to Favourite</string>
    <string name="participatess">PARTICIPANTS</string>
    <string name="engage">Engage</string>
    <string name="strpeerknow">LET YOUR PEER KNOW</string>
    <string name="strcontributed">  HAVE YOU CONTRIBUTED ?</string>
    <string name="isupportheader">I Support</string>
    <string name="head1">I promise that</string>
    <string name="head2">I’ll file my return of Income on time</string>
    <string name="head3">I’ll show correct income in my return of income</string>
    <string name="head4">I’ll pay all due taxes on time</string>
    <string name="upload_images">You can upload max 5 images</string>
    <string name="officer_name">Officer Name*</string>
    <string name="designation">Designation*</string>
    <string name="date_of_meetting">Date Of Meeting*</string>
    <string name="venue">Venue Detail*</string>
    <string name="target_audience">Target Audience</string>
    <string name="newscontent_details">The government has warned banks of “de-authorisation” of branches if they
        refuse to accept taxes under the amnesty scheme PMGKY, which ends on March 31. The Finance Ministry,
        in a communication to heads of banks which are authorised to accept deposits under the Pradhan Mantri
        Garib Kalyan Yojana (PMGKY), asked them to issue directions to all branches for making necessary changes
        in their system/software to accept the tax.</string>
    <string name="newscontent_details_bottom">“Non-compliance of this order may be viewed seriously and may lead to
        de-authorisation of that branch in case of refusalto accept taxes,” the ministry said.</string>
    <string name="newscontent_details_bottom2">Post demonetisation, the government came out with PMGKY under which people holding unaccounted
        cash can deposit them in bank accounts till March 31 by paying 50 per cent tax plus penalty.
        A quarter of the total sum will have to be parked in a non-interest bearing deposit for four years.
        The scheme opened on December 1.
    </string>
    <string name="newsdetails_header">Government warns banks over non-acceptance of PMGKY tax</string>
    <string name="contact_us1">CEO MyGov/Web information Manager</string>
    <string name="contact_us2">MyGov Cell</string>
    <string name="contact_us4">3rd Floor, Room no-3015</string>
    <string name="contact_us5">Ministry of Electronics and Information Technology</string>
    <string name="contact_us6">Load Road New Delhi - 110003</string>
    <string name="contact_us7">India</string>
    <string name="termscondition1">These terms of use describe your rights and responsibilities as a user of the
        mygov.in (MyGov).To have a MyGov account, you must accept these terms of use. MyGov, NIC, DeitY and Govt. of India reserve the right to
        make changes to MyGov and these terms of use at any time. If those changes affect your rights or responsibilities, you
        will be notified through MyGov.</string>
    <string name="termscondition2">The following terms of use supersede and replace any terms and conditions you may have previously
        accepted governing your use of MyGov. The following Terms &amp; Conditions come into effect as soon as you have accepted it
        and created your MyGov account.</string>
    <string name="termscondition3">As a user of MyGov you are granted a nonexclusive, nontransferable, revocable, limited license to
        access and use MyGov and content in accordance with these Terms of Use. Provider may terminate this license at any time for any reason.
        MyGov designed &amp; hosted by National Informatics Centre, Contents provided by the various Organizations, Departments and Ministries of
        Government of India.Though all efforts have been made to ensure the accuracy and currency of the content on MyGov, the same should not
        be construed as a statement of law or used for any legal purposes. In case of any ambiguity or doubts, users are advised to verify/check
        with the concerned Ministry/Department/Organization and/or other source(s), and to obtain appropriate professional advice.
        Under no circumstances will the Government Ministry/Department/Organization be liable for any expense, loss or damage including, without
        limitation, indirect or consequential loss or damage, or any expense, loss or damage whatsoever arising from use, or loss of use, of data,
        arising out of or in connection with the use of MyGov.</string>
    <string name="termsconditionheading1">LIMITATION ON USE:</string>
    <string name="termscondition4">The Content on MyGov is for your personal use only and not for commercial exploitation. You may not decompile,
        reverse engineer, disassemble, rent, lease, loan, sell, sublicense, or create derivative works from MyGov. Nor may you use any network
        monitoring or discovery software to determine the site architecture, or extract information about usage, individual identities or users.
        You will not use any robot, spider, other automatic software or device, or manual process to monitor or copy MyGov without Provider’s
        prior written permission. You will not copy, modify, reproduce, republish, distribute, display, or transmit for commercial, non-profit
        or public purposes all or any portion of MyGov, except to the extent permitted by the copyright policy of this terms of use.
        Any unauthorized use of MyGov is prohibited. The use of any software (e.g. bots, scraper tools) or other automatic devices to access,
        monitor or copy the website pages is prohibited unless expressly authorized by the MyGov in writing.</string>
    <string name="termsconditionheading2">POLICY WITH REGARD TO YOUR CONTENT:</string>
    <string name="termscondition5">Uploading content or submitting any materials for use on MyGov, you grant (or warrant that the owner of such
        rights has expressly granted) MyGov a perpetual, worldwide, royalty-free, irrevocable, non-exclusive right and license, with right to
        sublicense, to use, reproduce, modify, adapt, publish, publicly perform, publicly display, digitally display and digitally perform
        translate, create derivative works from and distribute such materials or incorporate such materials into any form, medium, or technology
        now known or later developed throughout the universe. You agree that you shall have no recourse against Provider for any alleged or actual
        infringement or misappropriation of any proprietary right in your communications to us.</string>
    <string name="titlee">Title:</string>
    <string name="authorr">Author:</string>
    <string name="created_on">Created On:</string>
    <string name="click_view"><u>Read More</u></string>
    <string name="retry">Retry</string>
    <string name="local_message">Local Message:</string>
    <string name="_2_sufficient_internet_bandwidth">2. Sufficient internet bandwidth.</string>
    <string name="please_check">Please check:</string>
    <string name="oops">Oops!!</string>
    <string name="_1_you_are_connected_to_internet">1. You are connected to internet.</string>
</resources>