<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar_title_rawer_button" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@drawable/contactusscreen"
                        android:scaleType="centerCrop" />
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/aboutus"
                    android:layout_marginTop="10dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:text="@string/contact_us1"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/blue"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:text="@string/contact_us2"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:text="@string/contact_us4"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:text="@string/contact_us5"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:text="@string/contact_us6"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:text="@string/contact_us7"/>


            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>

