<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:gravity="bottom">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector_green"
            android:backgroundTint="@color/green"
            android:text="@string/retry"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_oops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/oops"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dark_black"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_oops"
        android:layout_centerHorizontal="true"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/something_went_wrong"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView37"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="42dp"
        android:text="@string/please_check"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView39"
        android:layout_alignStart="@+id/textView39"
        android:layout_below="@+id/textView39"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/_1_you_are_connected_to_internet"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView40"
        android:layout_alignStart="@+id/textView40"
        android:layout_below="@+id/textView40"
        android:text="@string/_2_sufficient_internet_bandwidth"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/imgbtn_exit"
        android:layout_width="@dimen/actionbar_size"
        android:layout_height="@dimen/actionbar_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_action_content_clear"
        android:tint="@color/red"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/tv_local_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout5"
        android:layout_alignLeft="@+id/textView41"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/textView41"
        android:layout_below="@+id/textView42"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView41"
        android:layout_alignStart="@+id/textView41"
        android:layout_below="@+id/textView41"
        android:text="@string/local_message"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</RelativeLayout>

