<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_clickable">
    <!--<include
        layout="@layout/app_bar_detail"
        />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_size"
        android:background="@color/green"
        android:elevation="8dp"
        android:gravity="left"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/iv_back_btn"
            android:layout_width="40dp"
            android:layout_height="@dimen/actionbar_size"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:background="@null"
            android:src="@mipmap/ic_action_back_button" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/logo"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_dialog_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="News"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            />

    </LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/actionbar_size">
   <LinearLayout

       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="10dp"
       android:orientation="vertical"
       >

       <android.support.v7.widget.AppCompatTextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/newsdetails_header"
           android:textSize="15dp"
           android:textColor="@color/black"
           />
       <android.support.v7.widget.AppCompatTextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Published : February 24 2017, 5:56pm"
           android:textSize="10dp"
           android:textColor="@color/skyblue_dark"
           />

           <android.support.v7.widget.AppCompatTextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingTop="10dp"
               android:text="@string/newscontent_details"
               android:textSize="12dp"
               android:textColor="@color/black"
               />



           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="5dp"
               app:cardBackgroundColor="@color/white"
               app:cardCornerRadius="3dp"
               app:cardElevation="5dp"
               app:cardUseCompatPadding="true">
               <android.support.v7.widget.AppCompatImageView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@drawable/newslistingimage"/>
           </android.support.v7.widget.CardView>


       <android.support.v7.widget.AppCompatTextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="12dp"
           android:text="@string/newscontent_details_bottom"
           android:textColor="@color/black"
           />
       <android.support.v7.widget.AppCompatTextView
           android:paddingTop="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="12dp"
           android:text="@string/newscontent_details_bottom2"
           android:textColor="@color/black"
           />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="10dp">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Share: "
           android:textColor="@color/black"
           android:gravity="end"/>
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/fbbutton"/>
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/twitterbutton"/>
    </LinearLayout>

   </LinearLayout>
</ScrollView>
</FrameLayout>